force-app/main/default/objects/Book__c/fields/Author_And_Publisher_Match__c.field-meta.xml
<CustomField>
    <fullName>Author_And_Publisher_Match__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Author And Publisher Match</label>
    <type>Checkbox</type>
</CustomField>