force-app/main/default/objects/Book__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>Genres the book belongs to</description>
    <inlineHelpText>Genres the book belongs to</inlineHelpText>
    <label>Categories</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>