force-app/main/default/objects/Book__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Book description</description>
    <inlineHelpText>Book description</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>