force-app/main/default/objects/Book__c/fields/Hours_of_Listening__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Listening__c</fullName>
    <description>Length in hours of an audio book</description>
    <inlineHelpText>Length in hours of an audio book</inlineHelpText>
    <label>Hours of Listening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>