force-app/main/default/objects/Book__c/fields/ISBN__c.field-meta.xml
<CustomField>
    <fullName>ISBN__c</fullName>
    <description>Unique book identifier</description>
    <inlineHelpText>Unique book identifier</inlineHelpText>
    <label>ISBN</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>