force-app/main/default/objects/Book__c/fields/ISBN_Uneditable__c.field-meta.xml
<CustomField>
    <fullName>ISBN_Uneditable__c</fullName>
    <formula>ISBN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISBN</label>
    <type>Text</type>
</CustomField>