force-app/main/default/objects/Book__c/fields/Print_Length__c.field-meta.xml
<CustomField>
    <fullName>Print_Length__c</fullName>
    <description>Number of pages of a paper book</description>
    <inlineHelpText>Number of pages of a paper book</inlineHelpText>
    <label>Print Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>