force-app/main/default/objects/Book__c/fields/Record_Type_Uneditable__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Uneditable__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>