force-app/main/default/objects/Book__c/recordTypes/Digital_Book.recordType-meta.xml
<RecordType>
    <fullName>Digital_Book</fullName>
    <active>true</active>
    <description>Digital copy of a book</description>
    <label>Digital Book</label>
</RecordType>