force-app/main/default/objects/Book__c/recordTypes/Paper_Book.recordType-meta.xml
<RecordType>
    <fullName>Paper_Book</fullName>
    <active>true</active>
    <description>Physical printed copy of a book</description>
    <label>Paper Book</label>
</RecordType>