force-app/main/default/objects/Book__c/validationRules/Author_must_work_with_publisher.validationRule-meta.xml
<ValidationRule>
    <fullName>Author_must_work_with_publisher</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( Author_And_Publisher_Match__c )</errorConditionFormula>
    <errorMessage>Selected author and publisher must be working together</errorMessage>
</ValidationRule>