force-app/main/default/objects/Book__c/validationRules/Book_description_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_description_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>The book description cannot be blank</errorMessage>
</ValidationRule>