force-app/main/default/objects/Book__c/listViews/Approved_Books.listView-meta.xml
<ListView>
    <fullName>Approved_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Books</label>
</ListView>