force-app/main/default/objects/Book__c/listViews/Pending_Books.listView-meta.xml
<ListView>
    <fullName>Pending_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Books</label>
</ListView>