force-app/main/default/objects/Book__c/listViews/Recently_Added_Books.listView-meta.xml
<ListView>
    <fullName>Recently_Added_Books</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Publish_Date__c</columns>
    <columns>Publisher__c</columns>
    <columns>ISBN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recently Added Books</label>
</ListView>