force-app/main/default/objects/Book__c/listViews/Rejected_Books.listView-meta.xml
<ListView>
    <fullName>Rejected_Books</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Books</label>
</ListView>